# SimpleGraspingPipeline

./: .gitmodules  README.md
docker/: Dockerfile  common.yml  compose.yml
simple_grasping/: CMakeLists.txt  package.xml
simple_grasping/include/: filters.hpp  node.hpp  object_detector.hpp  params.hpp  plane_detector.hpp  utils.hpp
simple_grasping/launch/: simple_grasping.launch.py
simple_grasping/params/: gpd.cfg  params.yaml
simple_grasping/src/: filters.cpp  main.cpp  node.cpp  object_detector.cpp  params.cpp  plane_detector.cpp
simple_grasping_interfaces/: CMakeLists.txt  package.xml
simple_grasping_interfaces/action/: SimpleGrasp.action  SimplePerception.action
simple_grasping_interfaces/msg/: Furniture.msg  Grasp.msg  Object.msg  Plane.msg
simple_grasping_interfaces/srv/: AddFrame.srv  GenerateGrasps.srv  StartPerception.srv
simple_grasping_perception/: CMakeLists.txt  package.xml
simple_grasping_perception/include/: filters.hpp  node.hpp  object_detector.hpp  params.hpp  plane_detector.hpp  utils.hpp
simple_grasping_perception/launch/: simple_grasping_perception.launch.py
simple_grasping_perception/params/: gpd.cfg  params.yaml
simple_grasping_perception/src/: main.cpp  node.cpp  params.cpp
simple_grasping_world/: CMakeLists.txt  package.xml
simple_grasping_world/include/: node.hpp  params.hpp  transform.hpp  utils.hpp  world_model.hpp  world_model_io.hpp
simple_grasping_world/launch/: world.launch.py
simple_grasping_world/params/: params.yaml
simple_grasping_world/src/: node.cpp  params.cpp
world/: furnitures.yaml  objects.yaml
